--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@wdio/allure-reporter": "^8.0.13",
         "@wdio/cli": "^8.0.13",
         "@wdio/local-runner": "^8.0.13",
         "@wdio/mocha-framework": "^8.0.13",
@@ -16,5 +17,8 @@
     },
     "scripts": {
         "wdio": "wdio run wdio.conf.js"
+    },
+    "dependencies": {
+        "wdio-video-reporter": "^3.3.0"
     }
 }
